--- a/blog/templates/posts/styles.css
+++ b/blog/templates/posts/styles.css
@@ -37,7 +37,7 @@ h6 {
 }
 
 @media (max-width: 1000px) {
-  main {
+  #content-container {
     width: 90%;
   }
 }
